--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -36,11 +36,11 @@ jobs:
           mv -f ./auxiliar-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
           mv -f ./support-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
           
-          ls ./auxiliar-connector/target/filesToUpload
+          #ls ./auxiliar-connector/target/filesToUpload
           
-          for file in ./auxiliar-connector/target/filesToUpload/
+          for dir in */;
           do
-            echo "Folder Name: $file"
+            echo "Folder Name: $dir"
           done
 
 #          jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
