chore(test): testing upload folder with jar

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -38,7 +38,7 @@ jobs:
           
           #ls ./auxiliar-connector/target/filesToUpload
           
-          for dir in /auxiliar-connector/target/filesToUpload/*;
+          for dir in /auxiliar-connector/target/filesToUpload/*/;
           do
             echo "Folder Name: $dir"
           done
