chore(test): testing upload folder with jar

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -38,7 +38,9 @@ jobs:
           
           #ls ./auxiliar-connector/target/filesToUpload
           
-          for dir in /auxiliar-connector/target/filesToUpload/*/;
+          directory="/auxiliar-connector/target/filesToUpload/"
+          
+          find "$directory" -type d -print0 | while IFS= read -r -d '' dir; 
           do
             echo "Folder Name: $dir"
           done
