chore(test): testing upload folder with jar

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -38,7 +38,7 @@ jobs:
           
           #ls ./auxiliar-connector/target/filesToUpload
           
-          directory="./auxiliar-connector/target/filesToUpload"
+          directory="/auxiliar-connector/target/filesToUpload/"
           
           find "$directory" -type d -exec basename {} \; | while IFS= read -r dir; 
           do
