--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -44,5 +44,5 @@ jobs:
           do
             dir_name=$(basename "$dir")
             echo "Uploading Release: $dir_name"
-            jfrog rt u './auxiliar-connector/target/filesToUpload/**/*.jar' jb-connectors --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER
+            jfrog rt u './auxiliar-connector/target/filesToUpload/**' jb-connector-generic --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER
           done
