--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -35,7 +35,7 @@ jobs:
           mkdir -p ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
           mv -f ./auxiliar-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
           mv -f ./support-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
-                    
+          
           directory="./auxiliar-connector/target/filesToUpload/"
           
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
@@ -44,6 +44,9 @@ jobs:
           do
             dir_name=$(basename "$dir")
             echo "Uploading Release: $dir_name"
-            jarPath="./auxiliar-connector/target/filesToUpload/$dir_name/*.jar"
-            jfrog rt u $jarPath jb-connector-generic/$dir_name --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER --flat=false
+            jars=($dir/*.jar)
+            for jar in "${jars[@]}"; do
+              echo "Uploading $jar to jb-connector-generic/$dir_name/"
+              jfrog rt u "$jar" "jb-connector-generic/$dir_name/" --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER
+            done
           done
