--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -40,7 +40,7 @@ jobs:
           
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
           
-          jfrog rt upload "./auxiliar-connector/target/filesToUpload/10.20.30.40-aux/*" jb-connector-generic --recursive=false
+          jfrog rt upload "./auxiliar-connector/target/filesToUpload/**" jb-connector-generic --recursive=false
 
 #          for dir in "$directory"*/;
 #          do
