--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Publish to JFrog Artifactory
         run: |
           mkdir -p ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
-          #mkdir -p ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
+          mkdir -p ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
           mv -f ./auxiliar-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
-          mv -f ./support-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
+          mv -f ./support-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-sup
           
           directory="./auxiliar-connector/target/filesToUpload/"
           
@@ -42,11 +42,11 @@ jobs:
           
           jfrog rt upload "./auxiliar-connector/target/filesToUpload/*" jb-connector-generic --flat=false
 
-#          for dir in "$directory"*/;
-#          do
-#            dir_name=$(basename "$dir")
-#            echo "Uploading Release: $dir_name"
-#
-#            jarPath="./auxiliar-connector/target/filesToUpload/$dir_name/*.jar"
-#            jfrog rt upload $jarPath jb-connector-generic/$dir_name
-#          done
+          for dir in "$directory"*/;
+          do
+            dir_name=$(basename "$dir")
+            echo "Uploading Release: $dir_name"
+
+            jarPath="./auxiliar-connector/target/filesToUpload/$dir_name/*.jar"
+            jfrog rt upload $jarPath jb-connector-generic --flat=false
+          done
