--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -42,5 +42,10 @@ jobs:
           do
             dir_name=$(basename "$dir")
             echo "Uploading Release: $dir_name"
-            jfrog rt u "$dir/*.jar" "jb-connector-generic/$dir_name/{1}" --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER --flat=false
+            for jar_file in "$dir"*.jar
+            do
+              jar_name=$(basename "$jar_file")
+              echo "Uploading $jar_file to jb-connector-generic/$dir_name/$jar_name"
+              jfrog rt u "$jar_file" "jb-connector-generic/$dir_name/$jar_name" --build-name=$dir_name --build-number=$GITHUB_RUN_NUMBER --flat=false
+            done
           done
